Adding illegal reflective access warnings